Fix: name taken error message

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,13 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  activerecord:
+    attributes:
+      character:
+        name: "nombre"
+    errors:
+      models:
+        character:
+          attributes:
+            name:
+              taken: "Ya existe un personaje con este nombre"
